[package]
name = "pallet-identity"
version = '3.0.0-monthly-2021-08'
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME identity management pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
enumflags2 = { version = "0.6.2" }
sp-std = { version = "4.0.0-dev", default-features = false, git='https://github.com/paritytech/substrate.git' }
sp-io = { version = "4.0.0-dev", default-features = false, git='https://github.com/paritytech/substrate.git' }
sp-runtime = { version = "4.0.0-dev", default-features = false, git='https://github.com/paritytech/substrate.git' }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git='https://github.com/paritytech/substrate.git', optional = true }
frame-support = { version = "4.0.0-dev", default-features = false, git='https://github.com/paritytech/substrate.git' }
frame-system = { version = "4.0.0-dev", default-features = false, git='https://github.com/paritytech/substrate.git'}

[dev-dependencies]
sp-core = { version = "4.0.0-dev", git='https://github.com/paritytech/substrate.git'}
pallet-balances = { version = "4.0.0-dev",git='https://github.com/paritytech/substrate.git'}


[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
